--- a/3.html
+++ b/3.html
@@ -7,7 +7,7 @@
   <script src="javascript/default.js" charset="utf-8"></script>
 </head>
 <body>
-  <div include-html="header.html"></div>
+  <div include-html="component/header.html"></div>
   <h2>JavaScript</h2>
   <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="ㄴ">Hyper Text Markup Language (HTML)</a> is the standard markup language
   for <strong>creating <u>web</u> pages</strong> and web applications.
