--- a/2.html
+++ b/2.html
@@ -7,13 +7,7 @@
   <script src="javascript/default.js" charset="utf-8"></script>
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-    <li><a href="4.html">에라토스테네스의 체</a></li>
-  </ol>
+  <div include-html="component/header.html"></div>
   <h2>CSS</h2>
   <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="ㄴ">Hyper Text Markup Language (HTML)</a> is the standard markup language
   for <strong>creating <u>web</u> pages</strong> and web applications.
