--- a/2.html
+++ b/2.html
@@ -22,4 +22,7 @@
   HTML elements are delineated by tags, written using angle brackets.</p>
 
 </body>
+<script>
+includeHTML();
+</script>
 </html>
