에라토스테네스 작업중

--- a/4.html
+++ b/4.html
@@ -11,8 +11,8 @@
   <div include-html="component/header.html"></div>
   <h2>에라토스테네스의 체</h2>
   <img src = "resources/Sieve_of_Eratosthenes_animation.gif" width ="100%">
-  <input type="text" name="eratostenes" value="">
-  <button type="button" name="button" onclick="func1(this)">계산</button>
+  <input id="eratostenes" type="text" name="eratostenes" value="">
+  <button type="button" name="button" onclick="SieveOfEratosthenes()">계산</button>
   <output name="output">
 
 </body>
