--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <!-- <h1><a href="index.html">Mathematical Beauty</a></h1> -->
   <div id="grid">
       <ul>
-        <li><a href="1.html" >왕왕초보</a></li>
-        <li><a href="2.html" >왕초보</a></li>
-        <li><a href="3.html" >초보</a></li>
-        <li><a href="4.html">에라토스테네스의 체</a></li>
+        <li><a href="HTML.html" >왕왕초보</a></li>
+        <li><a href="CSS.html" >왕초보</a></li>
+        <li><a href="Javascript.html" >초보</a></li>
+        <li><a href="Eratosthenes.html">에라토스테네스의 체</a></li>
       </ul>
       <div id="article">
         <p>
