--- a/Eratosthenes.html
+++ b/Eratosthenes.html
@@ -10,14 +10,14 @@
 <body>
   <div include-html="component/title.html"></div>
   <div class="grid">
-    <div include-html="component/header.html"></div>
-    <div>
+    <header include-html="component/header.html"></header>
+    <article>
       <h2>에라토스테네스의 체</h2>
       <img src = "resources/Sieve_of_Eratosthenes_animation.gif" width ="100%">
       <input id="eratostenes" type="text" name="eratostenes" value="">
       <button type="button" name="button" onclick="SieveOfEratosthenes()">계산</button>
       <output name="output">
-    </div>
+    </article>
   </div>
 </body>
 <script>
