--- a/index.html
+++ b/index.html
@@ -7,27 +7,24 @@
   <script src="javascript/default.js" charset="utf-8"></script>
 </head>
 <body>
-  <h1 id="main"><a href="index.html">걸어서 수학속으로</a><img src="resources/walk.gif" width="10%" height="10%"></h1>
-  <!-- <h1><a href="index.html">Mathematical Beauty</a></h1> -->
-  <div id="grid">
-      <ul>
-        <li><a href="HTML.html" >왕왕초보</a></li>
-        <li><a href="CSS.html" >왕초보</a></li>
-        <li><a href="Javascript.html" >초보</a></li>
-        <li><a href="Eratosthenes.html">에라토스테네스의 체</a></li>
-      </ul>
-      <div id="article">
-        <p>
-          헝가리의 수학자 에르되시 팔은 수학의 언어로의 표현 불가능성에 관한 그의 견해를 다음과 같은 말로 표현했다.
-        </p>
-        <p style="margin-top:30px;">
-          '수는 왜 아름다운 것인가. 그것은 베토벤의 교향곡 제9번이 왜 아름다운지 묻는 것이다.<br>
-          당신이 그 답을 모르면, 다른 아무도 대답할 수 없다.<br>
-          나는 수가 아름답다는 것을 알고 있다.<br>
-          만약 수가 아름답지 않다면, 세상에 아름다운 것은 아무것도 없다.'<br><br>
-          <img src="resources/main.jpg" width="100%" height="50%">
-        </p>
-    </div>
+  <div include-html="component/title.html"></div>
+  <div class="grid">
+    <header include-html="component/header.html"></header>
+    <article>
+      <p>
+        헝가리의 수학자 에르되시 팔은 수학의 언어로의 표현 불가능성에 관한 그의 견해를 다음과 같은 말로 표현했다.
+      </p>
+      <p>
+        '수는 왜 아름다운 것인가. 그것은 베토벤의 교향곡 제9번이 왜 아름다운지 묻는 것이다.<br>
+        당신이 그 답을 모르면, 다른 아무도 대답할 수 없다.<br>
+        나는 수가 아름답다는 것을 알고 있다.<br>
+        만약 수가 아름답지 않다면, 세상에 아름다운 것은 아무것도 없다.'<br><br>
+        <img src="resources/main.jpg" width="100%" height="50%">
+      </p>
+    </article>
   </div>
 </body>
+<script>
+  includeHTML();
+</script>
 </html>
