--- a/CSS.html
+++ b/CSS.html
@@ -9,8 +9,8 @@
 <body>
   <div include-html="component/title.html"></div>
   <div class="grid">
-    <div include-html="component/header.html"></div>
-    <div>
+    <header include-html="component/header.html"></header>
+    <article>
       <h2>CSS</h2>
       <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="ㄴ">Hyper Text Markup Language (HTML)</a> is the standard markup language
       for <strong>creating <u>web</u> pages</strong> and web applications.
@@ -23,7 +23,7 @@
       It provides a means to create structured documents by denoting structural
       semantics for text such as headings, paragraphs, lists, links, quotes and other items.
       HTML elements are delineated by tags, written using angle brackets.</p>
-    </div>
+    </article>
   </div>
   
 
